clusters/constellation/apps/spuxx-dev/api/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spuxx-api-staging
  namespace: spuxx-dev
  labels:
    app: spuxx-api-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spuxx-api-staging
  template:
    metadata:
      labels:
        app: spuxx-api-staging
    spec:
      containers:
      - name: spuxx-api-staging
        image: spuxx/spuxx-api:main-20241107224531-3e6bef3 # {"$imagepolicy": "spuxx-dev:spuxx-api-staging"}
        ports:
        - containerPort: 8080
        securityContext:
          runAsNonRoot: true
        livenessProbe:
          httpGet:
            path: /alive
            port: 8080
