clusters/constellation/apps/spuxx-dev/api/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spuxx-api-staging
  namespace: spuxx-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "*.spuxx.dev"
    secretName: spuxx.dev
  rules:
  - host: api-staging.spuxx.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spuxx-api-staging
            port:
              name: http
